--- a/re_dashboard/templates/basewind.html
+++ b/re_dashboard/templates/basewind.html
@@ -23,16 +23,18 @@
     }
 
     .sidebar-toggle {
-      display: none;
+      display: none !important;
       position: fixed;
-      top: 15px;
-      left: 15px;
+      top: 8px;
+      right: 15px;
       z-index: 1100;
-      background-color: #2196f3;
-      color: white;
+       color: rgb(0, 0, 0);
       border: none;
       padding: 10px 15px;
       border-radius: 5px;
+      background-color: white;
+       
+       
     }
 
    @media (max-width: 576px) {
@@ -40,6 +42,7 @@
         display: block !important;
       }
  
+   
       .fixed-panel {
         transform: translateX(-100%);
         transition: transform 0.3s ease-in-out;
@@ -132,13 +135,6 @@
   {% include 'sidebaruser.html' %}
   {% endblock sidebar %}
 
-  <!-- Toggle button for small devices -->
-  <button class="sidebar-toggle mt-5" id="toggleSidebar">
-    <span>
-      <i class="fa fa-bars"></i> Menu
-
-    </span>
-  </button>
 
   <!-- Main layout -->
   <div class="container-fluid ">
